<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:title="@string/navigation_home" />
        <item
            android:id="@+id/navigation_locate"
            android:title="@string/navigation_locate" />
        <item
            android:id="@+id/navigation_sendmessages"
            android:title="@string/navigation_sendmessages" />
        <item
            android:id="@+id/navigation_create"
            android:title="@string/navigation_create" />
        <item
            android:id="@+id/navigation_logout_organiser"
            android:title="@string/navigation_logout" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/about"
                android:title="About Us" />
            <item
                android:id="@+id/contactus"
                android:title="Contact Us" />
        </menu>
    </item>

</menu>